loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:5: error: value avance is not a member of Unit
  gauche();avance();droite()avance
                            ^