loopfor.LoopStairs.scala.code
while(!estFaceMur){
  avance()
}
for (i <- 0 to 7){
  gauche();avance();droite()avance
}
for (j <- 0 to 3){
  avance()
}